[package]
name = "inifrs"
version = "0.1.0"
authors = ["ferhatgec"]
edition = "2018"
description = "fast .ini parser crate"
keywords = ["rust", "ini", "parser", "fast", "file"]
readme = "README.md"
repository = "https://github.com/ferhatgec/inifrs"
documentation = "https://docs.rs/inifrs"
license = "MIT"

include = [
    ".gitignore",
    "Cargo.toml",
    "src/*.rs"
]